[#32] sai/govinda - Fixed the multi notifications alignment problem.
What are the changes?

* Fixed the multi notifications alignment problem.

Why do we need this change?

* To show multiple notifications.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -469,7 +469,9 @@ a {
   grid-row: 1;
   grid-column: 1/7;
   display: flex;
+  align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 /* Card design starts */
